--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb+srv://webasebrandings:732vDyoSlvylrv8U@cluster0.n26qfkr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://webasebrandings:732vDyoSlvylrv8U@cluster0.n26qfkr.mongodb.net/jwttoken?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=DEMO-KEY
